<resources>
    <string name="app_name">ckp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_title">登录</string>
    <string name="import_username">请输入手机号码</string>
    <string name="import_password">请输入密码</string>
    <string name="register">注册</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="verification">验证码</string>
</resources>
