<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vg.ckp.MainActivity">

    <RelativeLayout
        android:layout_marginTop="5dp"
        android:id="@+id/login_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:src="@mipmap/icon_fanhui"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_title"
            android:textSize="20dp"/>
    </RelativeLayout>

    <EditText
        android:layout_marginTop="50dp"
        android:id="@+id/username"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@+id/login_ll"
        android:hint="@string/import_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <EditText
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:hint="@string/import_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>


    <Button
        android:textColor="@color/textcolor_white"
        android:id="@+id/login"
        android:textSize="20dp"
        android:text="@string/login_title"
        android:layout_marginTop="16dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:background="@drawable/btn_login_selector"
        android:layout_width="match_parent"
        android:layout_height="44dp"/>

    <Button
        android:id="@+id/register"
        android:textColor="@drawable/txt_register_selector"
        android:textSize="20dp"
        android:text="@string/register"
        android:layout_marginTop="16dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@+id/login"
        android:background="@drawable/btn_register_selector"
        android:layout_width="match_parent"
        android:layout_height="44dp"/>
    <CheckBox
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/isAutoLogin"
        android:text="自动登录"
        />

    <TextView
        android:id="@+id/forget"
        android:clickable="true"
        android:textColor="@drawable/txt_forget_selector"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        android:text="@string/forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</android.support.constraint.ConstraintLayout>
