<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.register.RegisterActivity">


    <RelativeLayout
        android:id="@+id/rl_register"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/register_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:src="@mipmap/icon_fanhui"/>

        <TextView
            android:textSize="20dp"
            android:layout_centerInParent="true"
            android:text="注册"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <EditText
        android:layout_marginTop="40dp"
        android:id="@+id/register_u"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@+id/rl_register"
        android:hint="@string/import_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <EditText

        android:layout_marginTop="10dp"
        android:id="@+id/register_v"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@+id/register_u"
        android:hint="例如：aabbcc"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>


      <Button
          android:id="@+id/register_v_btn"
          android:textColor="@color/textcolor_white"
          android:textSize="12dp"
          android:layout_marginTop="10dp"
          app:layout_constraintRight_toRightOf="@+id/register_v"
          app:layout_constraintTop_toBottomOf="@+id/register_u"
          android:text="@string/verification"
          android:layout_width="55dp"
          android:background="@drawable/btn_login_selector"
          android:layout_height="30dp"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/register_p1"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@+id/register_v"
        android:hint="@string/import_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/register_p2"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@+id/register_p1"
        android:hint="@string/import_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/registerBtn"
        android:textSize="20dp"
        android:background="@drawable/btn_login_selector"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@+id/register_p2"
        android:textColor="@color/textcolor_white"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</android.support.constraint.ConstraintLayout>